--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "schools-viewer",
+  "name": "school-viewer",
   "version": "0.1.0",
-  "private": true,
+  "author": {
+    "name": "Sam Hunt",
+    "url": "https://samhunt.dev/school-viewer"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.4",
     "@testing-library/user-event": "^12.6.3",
+    "@types/geojson": "^7946.0.7",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "d3": "^6.5.0",
+    "mapbox-gl": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
@@ -39,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "^2.0.4",
+    "@types/react-autocomplete": "^1.8.5",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
