--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "url": "https://samhunt.dev/school-viewer"
   },
   "dependencies": {
+    "@nivo/core": "^0.67.0",
+    "@nivo/pie": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.4",
     "@testing-library/user-event": "^12.6.3",
@@ -14,7 +16,6 @@
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-    "d3": "^6.5.0",
     "mapbox-gl": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
