--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "author": {
     "name": "Sam Hunt",
-    "url": "https://samhunt.dev/school-viewer"
+    "url": "https://samhunt.dev/"
   },
+  "homepage" : "https://samhunt.dev/school-viewer",
   "dependencies": {
     "@nivo/core": "^0.67.0",
     "@nivo/pie": "^0.67.0",
