--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "name": "Sam Hunt",
     "url": "https://samhunt.dev/"
   },
-  "homepage" : "https://samhunt.dev/school-viewer",
+  "homepage" : "https://samhunt.dev/projects/school-viewer",
   "dependencies": {
     "@nivo/core": "^0.67.0",
     "@nivo/pie": "^0.67.0",
