--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "name": "Sam Hunt",
     "url": "https://samhunt.dev/"
   },
-  "homepage" : "https://samhunt.dev/projects/school-viewer",
+  "homepage": "https://samhunt.dev/projects/school-viewer",
   "dependencies": {
     "@nivo/core": "^0.67.0",
     "@nivo/pie": "^0.67.0",
@@ -23,7 +23,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "worker-loader": "^3.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
