--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "homepage": "https://samhunt.dev/projects/school-viewer",
   "dependencies": {
+    "@nivo/bar": "^0.67.0",
     "@nivo/core": "^0.67.0",
     "@nivo/pie": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.9",
