--- a/package.json
+++ b/package.json
@@ -3,13 +3,31 @@
   "version": "0.1.0",
   "author": {
     "name": "Sam Hunt",
-    "url": "https://samhunt.dev/"
+    "url": "https://samhunt.dev"
   },
   "homepage": "https://samhunt.dev/projects/school-viewer",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@nivo/bar": "^0.67.0",
     "@nivo/core": "^0.67.0",
     "@nivo/pie": "^0.67.0",
+    "mapbox-gl": "^2.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4",
+    "worker-loader": "^3.0.7"
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "^2.0.4",
+    "@types/react-autocomplete": "^1.8.5",
+    "@types/react-router-dom": "^5.1.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.4",
     "@testing-library/user-event": "^12.6.3",
@@ -18,20 +36,7 @@
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-    "mapbox-gl": "^2.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4",
-    "worker-loader": "^3.0.7"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "typescript": "^4.1.3"
   },
   "eslintConfig": {
     "extends": [
@@ -50,10 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/mapbox-gl": "^2.0.4",
-    "@types/react-autocomplete": "^1.8.5",
-    "@types/react-router-dom": "^5.1.7"
   }
 }
