--- a/package.json
+++ b/package.json
@@ -13,30 +13,28 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@nivo/bar": "^0.67.0",
-    "@nivo/core": "^0.67.0",
-    "@nivo/pie": "^0.67.0",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "mapbox-gl": "^2.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "worker-loader": "^3.0.7"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.0.1",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/geojson": "^7946.0.10",
+    "@types/jest": "^29.0.0",
     "@types/mapbox-gl": "^2.0.4",
-    "@types/react-autocomplete": "^1.8.5",
-    "@types/react-router-dom": "^5.1.7",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.4",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/geojson": "^7946.0.7",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "typescript": "^4.1.3"
+    "@types/node": "^18.7.16",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
+    "typescript": "^4.8.3"
   },
   "eslintConfig": {
     "extends": [
@@ -48,7 +46,9 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not chrome < 51",
+      "not safari < 10"
     ],
     "development": [
       "last 1 chrome version",
