--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-#linter cache
-.eslintcache
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# local environment
-.env
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Deps
+node_modules
+
+# Generated
+dist
+dist-ssr
+
+# local environment
+.env
