fix: Update API URL and ethnicity count null handling

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "school-viewer",
   "version": "3.0.0",
+  "type": "module",
   "author": {
     "name": "Sam Hunt",
     "url": "https://samhunt.dev"
