--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "name": "Sam Hunt",
     "url": "https://samhunt.dev"
   },
-  "homepage": "https://school-viewer.samhunt.dev",
+  "homepage": "https://sam-hunt.github.io/school-viewer",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -17,36 +17,36 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^6.1.9",
-    "@mui/material": "^6.1.9",
-    "@nivo/bar": "^0.88.0",
-    "@nivo/core": "^0.88.0",
-    "@nivo/pie": "^0.88.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "@nivo/bar": "^0.99.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
     "mapbox-gl": "^2.11.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router": "^7.0.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router": "^7.9.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/geojson": "^7946.0.10",
+    "@eslint/js": "^9.38.0",
+    "@types/geojson": "^7946.0.16",
     "@types/mapbox-gl": "^2.7.10",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.0.4",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
-    "globals": "^15.12.0",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.16.0",
-    "vite": "^6.0.1"
+    "lint-staged": "^16.2.4",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
+    "vite": "^7.1.10"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
