--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nivo/bar": "^0.99.0",
     "@nivo/core": "^0.99.0",
     "@nivo/pie": "^0.99.0",
+    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "mapbox-gl": "^2.11.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
