perf: Add lazy loading and bundle optimization for improved performance
Implement code splitting for all page routes with React.lazy and Suspense
Add useDeferredValue to search input to prevent UI blocking during filtering
Configure Vite manual chunks to split vendor dependencies (React, MUI, Nivo, Mapbox, TanStack)
Install rollup-plugin-visualizer for bundle analysis with npm run build:analyze script
Extract LazyLoadingFallback component for reusable loading state
Update tests to handle async lazy loading with findByText
Update modernization plan progress for completed optimization tasks

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:analyze": "ANALYZE=true npm run build",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
@@ -58,6 +59,7 @@
     "jsdom": "^27.0.1",
     "lint-staged": "^16.2.4",
     "msw": "^2.11.5",
+    "rollup-plugin-visualizer": "^6.0.5",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.1",
     "vite": "^7.1.10",
