--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@vitest/ui": "^3.2.4",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
